--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ John Miko"
     <div class="section" id="about" data-aos="fade-up">
         <h2>About Me</h2>
         <img src="pic.jpeg" alt="Your Photo" style="width: 200px; border-radius: 50%; margin-bottom: 20px;">
-        <p>Hi, I'm <strong>John Miko Sarsalijo</strong>, a passionate Computer Science student studying at [Your School]. I'm currently in my first year, specializing in Data Science. I believe in blending technology and creativity to solve real-world problems and drive innovation. Outside of my studies, I am deeply motivated by faith, personal growth, and my dreams of making a difference in both the tech industry and society.</p>
+        <p>Hi, I'm <strong>John Miko Sarsalijo</strong>, a passionate Computer Science student studying at University of Perpetual Help System Dalta. I'm currently in my first year, specializing in Data Science. I believe in blending technology and creativity to solve real-world problems and drive innovation. Outside of my studies, I am deeply motivated by faith, personal growth, and my dreams of making a difference in both the tech industry and society.</p>
     </div>
 
     <!-- Add this after the About Me section and before the Favorite Food section -->
